--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   firebase.initializeApp(firebaseConfig);
 </script>
    
-    <script src="Player.js"></script>
-    <script src="Form.js"></script>
-    <script src="Game.js"></script>
+    <script src="player.js"></script>
+    <script src="form.js"></script>
+    <script src="game.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
